# play.rinha-2024.rs

./: .env.example  Cargo.toml  docker-compose.yml  seed.sql
migrations/2025-07-03-102701_create_clients/: up.sql
migrations/2025-07-06-155616_create_clients/: down.sql  up.sql
src/: db.rs  lib.rs  main.rs  schema.rs
src/clients/: db.rs  mod.rs  statements.rs  transactions.rs
