[package]
name = "rinha-2024-rs"
version = "0.1.0"
edition = "2024"
authors = ["kallebysantos"]
homepage = "https://github.com/kallebysantos/play.rinha-2024.rs"

[dependencies]
actix-web = "4"
chrono = { version = "0.4.41", features = ["serde"] }
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"] }
